<resources>
    <string name="app_name">T4G</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="HQ1">QUESTION 1</string>
    <string name="HQ2">QUESTION 2</string>
    <string name="HQ3">QUESTION 3</string>
    <string name="HQ4">QUESTION 4</string>
    <string name="HQ5">QUESTION 5</string>

    <string name="Q1"> "Have you felt restless, nervous or impatient consistently in the last couple of months?"</string>
    <string name="Q2"> "In the span of the past one week, have you experienced a feeling of great self confidence and self appraisal \n while other times these feelings strongly decreased?"</string>
    <string name="Q3">"Are you suffering from insomnia(difficulty falling asleep or maintaining sleep) \n or hypersomnia (excessively prolonged and deep sleep) ?"</string>
    <string name="Q4">"Have you experienced any traumatic event that still lingers in your mind too frequently \n or sometimes replays itself in your dreams?"</string>
    <string name="Q5">"Are you ever getting feelings of being trapped in your life or as though you have \n lost touch with the real world?"</string>

    <string name="Disorders">MENTAL DISORDERS</string>
    <string name="Friends">FRIENDS</string>
    <string name="Specialists">SPECIALISTS</string>
    <string name="Title">WHAT YOU NEED TO KNOW…</string>
    <string name="Disorder2">Mental disorders vary over a wide range of mental health conditions that affect mood, thinking and overall behaviour.\n They comprise a broad range of problems with different symptoms, some more severe than others.</string>
    <string name="Friends2">Friendships are valuable as we may talk to friends in confidence about things we would not discuss with other people.\n Find friends you can talk to and listen to, to help cope with or recover from various disorders.</string>
    <string name="Specialists2">A psychiatrist is a physician devoted to the diagnosis, prevention, study and treatment of mental disorders.\n Meet and talk to psychologists to help improve your mental health. </string>
    <string name="Title2"> </string>
    <string name="results">RESULTS</string>
    <string name="resultdesc">results of the test shown here…Proceed to share with other people with similar diagnoses and specialists as well</string>

    <string name="proceed">Proceed</string>
    <string name="congrats">Congratulations. You have successfully completed the T4G evaluation test. Click the button below. Disclaimer:blah blah blah</string>

    <string name="see_results">See Results</string>
    <string name="get_started">Get Started</string>
    <string name="intro">Before starting, please take the evaluation test provided which is designed for several mental disorders.\nThis test is solely aimed at identifying the disorder you are most likely portraying.\nWe then present to you suitable friends and specialists.</string>
    <string name="take_test">Take Test</string>

    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? SIGN UP.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account_sign_in">Already have an account? SIGN IN.</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="yesbtn">Yes</string>
    <string name="nobtn">No</string>
    <string name="next_questionbtn">Next Question</string>
    <string name="heading_">HEADING</string>
    <string name="textview">TextView</string>
    <string name="mental">MENTAL DISORDERS</string>
</resources>
