<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:background="#E0EEF8">

    <include
    android:id="@+id/toolbar"
    layout="@layout/bar_layout"/>
    <ImageView
        android:layout_width="100dp"
        android:id="@+id/logo"
        android:layout_height="100dp"
        android:src="@drawable/logof"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="70dp"
        />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:drawableLeft="@drawable/name"
        android:layout_below="@id/logo"
        android:padding="10dp"
        android:drawableStart="@drawable/name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:drawableLeft="@drawable/email"
        android:layout_below="@id/username"
        android:padding="10dp"
        android:drawableStart="@drawable/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:drawableLeft="@drawable/password"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/email"
        android:padding="10dp"
        android:drawableStart="@drawable/password" />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textSize="18sp"
        android:id="@+id/btn_register"
        android:textColor="@color/colorWhite"
        android:padding="8dp"
        android:clickable="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/password"

        android:focusable="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="#5612CF"
        android:clickable="true"
        android:onClick="login"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:padding="10dp"
        android:layout_below="@id/btn_register"
        android:focusable="true" />

</RelativeLayout>