<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rib"
    tools:context=".Disorders.AnxActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/slide_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ribbon"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heading"
        android:textColor="#000"
        android:text="@string/results"
        android:layout_centerHorizontal="true"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_below="@id/slide_image"
        android:layout_marginBottom="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:textColor="#000"
        android:text="@string/resultdesc"
        android:layout_centerHorizontal="true"
        android:textSize="21sp"
        android:padding="15dp"
        android:layout_below="@id/heading"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:background="@drawable/proceed"
        android:text="@string/proceed"
        android:textAlignment="center"
        android:textSize="18sp"
        android:id="@+id/register"
        android:textColor="#fff"
        android:padding="8dp"
        android:clickable="true"
        android:onClick="goHome"
        android:focusable="true"
       android:layout_marginTop="200dp"
        android:layout_below="@id/description"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:background="@drawable/proceed"
        android:text="Retake Test"
        android:textAlignment="center"
        android:textSize="18sp"
        android:id="@+id/retakebtn"
        android:textColor="#fff"
        android:padding="8dp"
        android:clickable="true"
        android:onClick="takeTest"
        android:layout_below="@id/register"
        android:focusable="true"
        android:layout_marginTop="15dp"/>

</RelativeLayout>