<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".Disorders.Anx"
    android:background="@drawable/rib">

    <android.support.v4.view.ViewPager
        android:id="@+id/testViewPager"
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="30dp">

    </android.support.v4.view.ViewPager>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/testViewPager"
        android:id="@+id/buttons"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/yesbtn"
            android:textSize="18sp"
            android:background="@drawable/yes"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:layout_marginBottom="15dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/nobtn"
            android:textSize="18sp"
            android:background="@drawable/no"
            android:layout_below="@id/yes"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:visibility="invisible"/>

    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login"
        android:text="@string/next_questionbtn"
        android:textAlignment="center"
        android:textSize="18sp"
        android:id="@+id/btn_next_qn"
        android:textColor="@color/colorWhite"
        android:padding="8dp"
        android:clickable="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:focusable="true"
        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/testdots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="0dp">

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultstv"
        android:visibility="invisible"/>

</RelativeLayout>